syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "PrecipitationChanceProto";

message PrecipitationChanceProto {
  optional string time = 1;
  int32 percent = 2;
  optional int32 percentDiff = 3;
  optional int32 imgIdPrecipitationChance = 4;
}
