syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "SpeedUnitProto";

enum SpeedUnitProto {
  MS = 0;
  KMH = 1;
  MPH = 2;
}