syntax = "proto3";
import "speed_unit.proto";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "WindSpeedProto";

message WindSpeedProto {
  int32 speed = 1;
  optional int32 speedDiff = 2;
  optional int32 imgIdChangeWindSpeed = 3;
  SpeedUnitProto speedUnit = 4;
}
